--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,5 @@ include LICENSE
 include doc/API_documentation_machofile.md
 include CITATION.cff
 recursive-exclude * __pycache__
-recursive-exclude * *.py[co] 
+recursive-exclude * *.py[co]
+recursive-exclude _local * 
